# PrimeApp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  vcpkg.json
include/backend/: Backend.h
include/frontend/: App.h  GUI.h  Renderer.h
src/: CMakeLists.txt  main.cpp
src/backend/: Backend.cpp  Backend.h  BackendOption.h  CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  OpencvBackend.cpp  OpencvBackend.h  PhotometricsBackend.cpp  PhotometricsBackend.h
src/frontend/: App.cpp  App.h  CMakeLists.txt  GUI.cpp  GUI.h  Renderer.cpp  Renderer.h  ViewPort.cpp  ViewPort.h  main.cpp
src/messages/: MessageQueue.h  messages.h
src/misc/: Log.h  LogSink.h  Meta.h
src/utils/: CMakeLists.txt  Exec.h  FileUtils.cpp  FileUtils.h  MySerial.h  Timer.cpp  Timer.h
src/videoproc/: CMakeLists.txt  PythonWorker.cpp  PythonWorker.h  VideoProcessor.cpp  VideoProcessor.h
src/worker/: worker.cpp  worker.h
src/workers/: CMakeLists.txt  CameraWorker.cpp  CameraWorker.h  PythonWorker.cpp  PythonWorker.h  Worker.h
